# appStore

./: CMakeLists.txt
appStoreApp/: CMakeLists.txt
appStoreApp/src/: MainWindow.cpp  MainWindow.h  main.cpp
appStoreApp/src/client/: Client.cpp  Client.h
appStoreApp/src/handlers/: TcpHandler.cpp  TcpHandler.h
appStoreService/: CMakeLists.txt
appStoreService/src/: main.cpp
appStoreService/src/handlers/: DownloadHandler.cpp  DownloadHandler.h  RepoHandler.cpp  RepoHandler.h  TcpHandler.cpp  TcpHandler.h  WebHandler.cpp  WebHandler.h
appStoreService/src/service/: Service.cpp  Service.h
buildScripts/win32/: buildWin32.bat  buildWin64.bat
